# mathmodel

./: .gitignore  CLAUDE.md  README.md  main.py  paper_outline.md  paper_required.md  pyproject.toml
.claude/: settings.local.json
analysis/: figure_guide.md  modeling_principles.md  problem1.md  problem1a_results.json  problem1b_results.json  problem1c_predictions.csv  problem2.md  problem2a_results.json  problem2b_results.json  problem3.md  problem3_classification.csv  problem3_results.json  problem4.md  problem4_results.json  review_report.md
data/: 数据说明.md  表单1_文物信息.csv  表单2_化学成分.csv  表单3_未知类别.csv  问题描述.md
paper/: main.tex  references.bib
paper/sections/: 01_restatement.tex  02_analysis.tex  03_assumptions.tex  04_problem1.tex  05_problem2.tex  06_problem3.tex  07_problem4.tex  08_evaluation.tex  09_references.tex  10_appendix.tex
src/: data_loader.py  problem1a.py  problem1b.py  problem1c.py  problem2a.py  problem2b.py  problem3.py  problem4.py  test_critical.py  validate.py
